Edited HTML and applied CSS

--- a/CSS/about.css
+++ b/CSS/about.css
@@ -12,6 +12,12 @@ body {
     padding: 20px;
 }
 
+nav .logo a {
+    height: 50px;
+    color: white;
+    cursor: pointer;
+}
+
 .about-container {
     max-width: 900px;
     margin: auto;
