--- a/CSS/courses.css
+++ b/CSS/courses.css
@@ -13,9 +13,26 @@ body {
     padding: 20px;
 }
 
+.container {
+    position: relative;
+}
+
+.logo {
+    margin-bottom: 10px;
+    width: 20%;
+    position: sticky;
+}
+
+.logo a {
+    height: 50px;
+    color: white;
+    cursor: pointer;
+}
+
+
 header h1 {
     text-align: center;
-    color:white;
+    color: white;
     margin-bottom: 20px;
 }
 
@@ -61,7 +78,8 @@ header h1 {
     margin-bottom: 10px;
 }
 
-.course p, .course ul {
+.course p,
+.course ul {
     margin-bottom: 15px;
 }
 
@@ -106,6 +124,7 @@ footer {
     color: white;
     border-radius: 10px;
 }
-* a{
+
+* a {
     color: rgb(17, 255, 17);
 }
