--- a/CSS/about.css
+++ b/CSS/about.css
@@ -9,13 +9,50 @@ body {
     background-color: #3c3c8a;
     color: #fff;
     line-height: 1.6;
-    padding: 20px;
+}
+.about-container{
+    position: relative;
+}
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #2a3356;
+    padding: 10px 20px;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease-in-out;
 }
 
-nav .logo a {
+nav:hover {
+    background-color: #1c243e;
+}
+
+nav .logo img {
     height: 50px;
+    width: 50px;
+    border-radius: 50%;
+}
+
+nav .nav-items ul {
+    display: flex;
+    list-style: none;
+    gap: 100px;
+    justify-content: space-around;
+    align-items: center;
+}
+
+nav .nav-items ul li a {
+    text-decoration: none;
     color: white;
-    cursor: pointer;
+    font-size: 1rem;
+    transition: color 0.3s ease;
+}
+
+nav .nav-items ul li:hover a {
+    color: #ffcc00;
 }
 
 .about-container {
@@ -25,6 +62,8 @@ nav .logo a {
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+    margin-top: 40px;
+    margin-bottom: 20px;
 }
 
 header h1 {
