--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -9,22 +9,60 @@ body {
     background-color: rgb(25, 25, 46);
     color: #fff;
     line-height: 1.6;
-    padding: 20px;
 }
 
 .contact-container {
-    max-width: 800px;
+    max-width: 600px;
     margin: auto;
     background: rgba(255, 255, 255, 0.1);
     padding: 30px;
     border-radius: 10px;
-    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 8px 15px rgba(29, 7, 7, 0.2);
+    margin-top: 50px;
+    margin-bottom: 50px;
+
 }
 
-.logo a {
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #2a3356;
+    padding: 10px 20px;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease-in-out;
+}
+
+nav:hover {
+    background-color: #1c243e;
+}
+
+nav .logo img {
     height: 50px;
+    width: 50px;
+    border-radius: 50%;
+}
+
+nav .nav-items ul {
+    display: flex;
+    list-style: none;
+    gap: 100px;
+    justify-content: space-around;
+    align-items: center;
+}
+
+nav .nav-items ul li a {
+    text-decoration: none;
     color: white;
-    cursor: pointer;
+    font-size: 1rem;
+    transition: color 0.3s ease;
+}
+
+nav .nav-items ul li:hover a {
+    color: #ffcc00;
 }
 
 header h1 {
@@ -144,6 +182,23 @@ footer p {
 .social-icons img:hover {
     transform: scale(1.2);
     box-shadow: 0 8px 15px rgba(255, 255, 255, 0.3);
+}
+
+.copyright {
+    text-align: center;
+    margin-top: 30px;
+    padding: 10px 0;
+    background: #2a3356;
+    color: white;
+    border-radius: 10px;
+}
+.contact-box{
+    display: flex;
+    justify-content: center;
+    text-align: left;
+}
+.contact-box a{
+    color: rgb(12, 219, 12);
 }
 
 @media (max-width: 768px) {
