--- a/CSS/index.css
+++ b/CSS/index.css
@@ -111,25 +111,35 @@ nav .buttons .login {
 .paragraph {
     display: flex;
     justify-content: center;
-    margin: 20px 10px;
+    margin:60px 10px;
 }
 
 .paragraph .paragraph-content {
-    width: 90%;
+    width:90%;
     max-width: 600px;
     text-align: left;
+    background-color: rgb(37, 109, 160);
+    border-radius: 10px;
+    padding: 30px;
+    color: #fcfaf4;
+    box-shadow: 1px 1px 6px 1px rgb(238, 238, 239);
+    font-size: 20px;
+    transition: transform 0.3s ease-in-out;
 }
-
+.paragraph .paragraph-content:hover{
+    transform: scale(1.1);
+}
 .images {
     display: flex;
     justify-content: center;
     gap: 25px;
     flex-wrap: wrap;
-    padding: 20px;
+    padding: 30px;
 }
 
 .images img {
     border-radius: 10px;
+    width: 250px;
     box-shadow: 2px 2px 2px rgb(15, 5, 106);
     transition: transform 0.3s ease-in-out;
 }
@@ -156,6 +166,7 @@ nav .buttons .login {
     border: none;
     text-align: left;
     font-size: 16px;
+    outline: none;
 }
 
 .footer .input button {
@@ -183,7 +194,10 @@ footer {
     color: white;
     border-radius: 10px;
 }
-
+.footer .input input:focus{
+    border: 2px solid #ddd;
+    box-shadow: 0 0 8px rgba(255, 255, 255, 0.6);
+}
 
 @media (max-width: 768px) {
     nav .logo img {
